# huffman-encoding

./: Cargo.toml  README.md  README.tpl
.github/workflows/: main.yml
src/: lib.rs
tests/: huffman.rs
