[package]
name = "huffman-encoding"
version = "0.0.1"
authors = ["Owayss Kabtoul <owayssk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1"
bitvec = "0.22.3"

[dev-dependencies]
proptest = "1.0.0"

[badges]
github = { repository = "owayss/huffman-encoding" }
coveralls = { repository = "owayss/huffman-encoding",  branch = "main" }
